lib_wlr_types = static_library('wlr_types', files(
    'wlr_data_device_manager.c',
    'wlr_data_source.c',
    'wlr_input_device.c',
    'wlr_keyboard.c',
    'wlr_output.c',
    'wlr_output_layout.c',
    'wlr_pointer.c',
    'wlr_cursor.c',
    'wlr_region.c',
    'wlr_seat.c',
    'wlr_surface.c',
    'wlr_tablet_pad.c',
    'wlr_tablet_tool.c',
    'wlr_touch.c',
    'wlr_xdg_shell_v6.c',
    'wlr_wl_shell.c',
    'wlr_compositor.c',
	'wlr_geometry.c',
  ),
  include_directories: wlr_inc,
  dependencies: [wayland_server, pixman, wlr_protos])
