lib_wlr_types = static_library(
	'wlr_types',
	files(
		'wlr_box.c',
		'wlr_compositor.c',
		'wlr_cursor.c',
		'wlr_data_device.c',
		'wlr_gamma_control.c',
		'wlr_idle.c',
		'wlr_input_device.c',
		'wlr_keyboard.c',
		'wlr_list.c',
		'wlr_output_damage.c',
		'wlr_output_layout.c',
		'wlr_output.c',
		'wlr_pointer.c',
		'wlr_primary_selection.c',
		'wlr_region.c',
		'wlr_screenshooter.c',
		'wlr_seat.c',
		'wlr_server_decoration.c',
		'wlr_surface.c',
		'wlr_tablet_pad.c',
		'wlr_tablet_tool.c',
		'wlr_touch.c',
		'wlr_wl_shell.c',
		'wlr_xcursor_manager.c',
		'wlr_xdg_shell_v6.c',
		'wlr_xdg_shell.c',
	),
	include_directories: wlr_inc,
	dependencies: [wayland_server, pixman, wlr_protos],
)
