lib_wlr_types = static_library(
	'wlr_types',
	files(
		'data_device/wlr_data_device.c',
		'data_device/wlr_data_offer.c',
		'data_device/wlr_data_source.c',
		'data_device/wlr_drag.c',
		'seat/wlr_seat_keyboard.c',
		'seat/wlr_seat_pointer.c',
		'seat/wlr_seat_touch.c',
		'seat/wlr_seat.c',
		'tablet_v2/wlr_tablet_v2_pad.c',
		'tablet_v2/wlr_tablet_v2_tablet.c',
		'tablet_v2/wlr_tablet_v2_tool.c',
		'tablet_v2/wlr_tablet_v2.c',
		'xdg_shell_v6/wlr_xdg_popup_v6.c',
		'xdg_shell_v6/wlr_xdg_positioner_v6.c',
		'xdg_shell_v6/wlr_xdg_shell_v6.c',
		'xdg_shell_v6/wlr_xdg_surface_v6.c',
		'xdg_shell_v6/wlr_xdg_toplevel_v6.c',
		'xdg_shell/wlr_xdg_popup.c',
		'xdg_shell/wlr_xdg_positioner.c',
		'xdg_shell/wlr_xdg_shell.c',
		'xdg_shell/wlr_xdg_surface.c',
		'xdg_shell/wlr_xdg_toplevel.c',
		'wlr_box.c',
		'wlr_buffer.c',
		'wlr_compositor.c',
		'wlr_cursor.c',
		'wlr_export_dmabuf_v1.c',
		'wlr_gamma_control_v1.c',
		'wlr_gamma_control.c',
		'wlr_idle_inhibit_v1.c',
		'wlr_idle.c',
		'wlr_input_device.c',
		'wlr_input_inhibitor.c',
		'wlr_input_method_v2.c',
		'wlr_keyboard.c',
		'wlr_layer_shell_v1.c',
		'wlr_linux_dmabuf_v1.c',
		'wlr_list.c',
		'wlr_matrix.c',
		'wlr_output_damage.c',
		'wlr_output_layout.c',
		'wlr_output.c',
		'wlr_pointer_constraints_v1.c',
		'wlr_pointer.c',
		'wlr_presentation_time.c',
		'wlr_gtk_primary_selection.c',
		'wlr_region.c',
		'wlr_screencopy_v1.c',
		'wlr_screenshooter.c',
		'wlr_server_decoration.c',
		'wlr_surface.c',
		'wlr_tablet_pad.c',
		'wlr_tablet_tool.c',
		'wlr_text_input_v3.c',
		'wlr_touch.c',
		'wlr_virtual_keyboard_v1.c',
		'wlr_wl_shell.c',
		'wlr_xcursor_manager.c',
		'wlr_xdg_decoration_v1.c',
		'wlr_xdg_output_v1.c',
	),
	include_directories: wlr_inc,
	dependencies: [pixman, xkbcommon, wayland_server, wlr_protos, libinput],
)
