install_headers(
	'wlr_box.h',
	'wlr_buffer.h',
	'wlr_compositor.h',
	'wlr_cursor.h',
	'wlr_data_control_v1.h',
	'wlr_data_device.h',
	'wlr_export_dmabuf_v1.h',
	'wlr_foreign_toplevel_management_v1.h',
	'wlr_fullscreen_shell_v1.h',
	'wlr_gamma_control_v1.h',
	'wlr_gamma_control.h',
	'wlr_gtk_primary_selection.h',
	'wlr_idle_inhibit_v1.h',
	'wlr_idle.h',
	'wlr_input_device.h',
	'wlr_input_inhibitor.h',
	'wlr_input_method_v2.h',
	'wlr_keyboard.h',
	'wlr_layer_shell_v1.h',
	'wlr_linux_dmabuf_v1.h',
	'wlr_list.h',
	'wlr_matrix.h',
	'wlr_output_damage.h',
	'wlr_output_layout.h',
	'wlr_output.h',
	'wlr_pointer_constraints_v1.h',
	'wlr_pointer.h',
	'wlr_presentation_time.h',
	'wlr_primary_selection.h',
	'wlr_region.h',
	'wlr_relative_pointer_v1.h',
	'wlr_screencopy_v1.h',
	'wlr_screenshooter.h',
	'wlr_seat.h',
	'wlr_server_decoration.h',
	'wlr_surface.h',
	'wlr_switch.h',
	'wlr_tablet_pad.h',
	'wlr_tablet_tool.h',
	'wlr_tablet_v2.h',
	'wlr_text_input_v3.h',
	'wlr_touch.h',
	'wlr_virtual_keyboard_v1.h',
	'wlr_wl_shell.h',
	'wlr_xcursor_manager.h',
	'wlr_xdg_decoration_v1.h',
	'wlr_xdg_output_v1.h',
	'wlr_xdg_shell_v6.h',
	'wlr_xdg_shell.h',
	subdir: 'wlr/types',
)
